--- a/CPP_8/CPP_8.vcxproj.filters
+++ b/CPP_8/CPP_8.vcxproj.filters
@@ -5,5 +5,13 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
+    <Filter Include="Исходные файлы\main">
+      <UniqueIdentifier>{50264b3d-6a34-4054-b929-55a9c70d8e72}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Исходные файлы\main</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
